<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/station_list_bg"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/onlinetalk_title_bg">
        
         <TextView 
            android:id="@+id/docor_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:background="@drawable/doctor_icon"/>
        <TextView 
            android:id="@+id/doctor_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/docor_icon_text"
            android:clickable="true"
            android:textSize="18sp"
            android:textColor="#ff3a4446"
            android:text="@string/doctor_title"/>
        <Button 
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/onlinetalk_back"/>
        
    </RelativeLayout>
    <SurfaceView 
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:background="@drawable/onlinetalk_surfaceview"/>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:layout_weight="1"
        	android:orientation="vertical">
        	<Button 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:background="@drawable/onlinetalk_switch_voice_icon"/>
        	<TextView 
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginTop="5dp"
            	android:textColor="#ffffffff"
            	android:text="@string/onlinetalk_switch_voice_text"/>
        </LinearLayout>
        <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:layout_weight="1"
        	android:orientation="vertical">
        	
        	<Button 
        	    android:id="@+id/checkout_button"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	android:background="@drawable/onlinetalk_checkout"/>

        </LinearLayout>
        <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:layout_weight="1"
        	android:orientation="vertical">
        	<Button 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:background="@drawable/onlinetalk_switch_cap_icon"/>
        	<TextView 
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginTop="5dp"
            	android:textColor="#ffffffff"
            	android:text="@string/onlinetalk_switch_cap_text"/>
        </LinearLayout>
    </LinearLayout>
  
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:src="@drawable/onlinetalk_doctor_info"/>
</LinearLayout>
